# morse_cmake

./: .gitignore  .gitlab-ci.yml  README.md
modules/: FindHeadersAndLibs.cmake  FindPkgconfigLibrariesAbsolutePath.cmake  GenPkgConfig.cmake  MorseInit.cmake  RulesPrecisions.cmake  Sanitizer.cmake  SetCMakeCudaArchitectures.cmake
modules/find/: FindAL4SAN.cmake  FindBLAS.cmake  FindBLASEXT.cmake  FindCBLAS.cmake  FindCHAMELEON.cmake  FindEZTRACE.cmake  FindFABULOUS.cmake  FindFFTW.cmake  FindFXT.cmake  FindGTG.cmake  FindHQR.cmake  FindHWLOC.cmake  FindHYPRE.cmake  FindInit.cmake  FindLAPACK.cmake  FindLAPACKE.cmake  FindLAPACKEXT.cmake  FindM.cmake  FindMAGMA.cmake  FindMETIS.cmake  FindMUMPS.cmake  FindMorseCommon.cmake  FindMorseInit.cmake  FindPAMPA.cmake  FindPAPI.cmake  FindPARMETIS.cmake  FindPARSEC.cmake  FindPASTIX.cmake  FindPETSC.cmake  FindPETSc.cmake  FindPTSCOTCH.cmake  FindPkgconfigLibrariesAbsolutePath.cmake  FindQUARK.cmake  FindRT.cmake  FindSCALAPACK.cmake  FindSCOTCH.cmake  FindSIMGRID.cmake  FindSLEPC.cmake  FindSPM.cmake  FindSTARPU.cmake  (+4 more)
modules/find/tests/: CMakeLists.txt  README.md  run_ctest.sh
modules/precision_generator/: codegen.py  subs.py  subs_blas.py
